<?xml version="1.0" encoding="UTF-8"?>
<!--
 ~ Hibernate Search, full-text search for your domain model
 ~
 ~ License: GNU Lesser General Public License (LGPL), version 2.1 or later
 ~ See the lgpl.txt file in the root directory or <http://www.gnu.org/licenses/lgpl-2.1.html>.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>hibernate-search-parent</artifactId>
        <groupId>org.hibernate</groupId>
        <version>5.9.0-SNAPSHOT</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>

    <artifactId>hibernate-search-integrationtest-jdk9-modules</artifactId>
    <packaging>jar</packaging>

    <name>Hibernate Search JDK9 Modules Integration Tests</name>
    <description>Hibernate Search integration tests for JDK9 modules</description>

    <dependencies>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>hibernate-search-orm</artifactId>
            <exclusions>
                <exclusion>
                    <!-- Need to exclude this as it otherwise introduces split-package problems with lucene-core -->
                    <groupId>org.apache.lucene</groupId>
                    <artifactId>lucene-misc</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>hibernate-search-engine</artifactId>
            <type>test-jar</type>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <!-- Need to exclude this as it otherwise introduces split-package problems with lucene-core -->
                    <groupId>org.apache.lucene</groupId>
                    <artifactId>lucene-misc</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>compile</scope>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.javassist</groupId>
                <artifactId>javassist</artifactId>
                <version>3.22.0-GA</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <resources>
            <resource>
                <filtering>true</filtering>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <executions>
                    <execution>
                        <id>verify</id>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>9</source>
                    <target>9</target>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            
<!--             <plugin> -->
<!--                 <groupId>org.moditect</groupId> -->
<!--                 <artifactId>moditect-maven-plugin</artifactId> -->
<!--                 <version>1.0.0-SNAPSHOT</version> -->
<!--                 <executions> -->
<!--                     <execution> -->
<!--                         <id>add-module-info-to-dependencies</id> -->
<!--                         <phase>generate-resources</phase> -->
<!--                         <configuration> -->
<!--                             <outputDirectory>${project.build.directory}/modules</outputDirectory> -->
                            
<!--                             <modules> -->
<!--                                 <module> -->
<!--                                     <artifact> -->
<!--                                         <groupId>org.jboss.spec.javax.interceptor</groupId> -->
<!--                                         <artifactId>jboss-interceptors-api_1.2_spec</artifactId> -->
<!--                                         <version>1.0.1.Final</version> -->
<!--                                     </artifact> -->
<!--                                     <moduleInfo> -->
<!--                                         <name>beta.jboss.interceptor.api_1_2</name> -->
<!--                                     </moduleInfo> -->
                                    
<!--                                 </module> -->
<!--                                 <module> -->
<!--                                     <artifact> -->
<!--                                         <groupId>org.jboss.spec.javax.transaction</groupId> -->
<!--                                         <artifactId>jboss-transaction-api_1.2_spec</artifactId> -->
<!--                                         <version>2.0.0.Alpha1</version> -->
<!--                                     </artifact> -->
<!--                                     <moduleInfo> -->
<!--                                      </moduleInfo> -->
<!--                                     <moduleInfoSource> -->
<!--                                          module java.transaction { -->
<!--                                              exports javax.transaction; -->
<!--                                              requires java.interceptor; -->
<!--                                          } -->
<!--                                     </moduleInfoSource> -->
<!--                                 </module> -->
<!--                                 <module> -->
<!--                                     <artifact> -->
<!--                                         <groupId>org.apache.lucene</groupId> -->
<!--                                         <artifactId>lucene-misc</artifactId> -->
<!--                                         <version>5.5.4</version> -->
<!--                                     </artifact> -->
<!--                                     <moduleInfo> -->
<!--                                         <name>org.apache.lucene.misc</name> -->
<!--                                         <exports> -->
<!--                                             org.apache.lucene.uninverting; -->
<!--                                         </exports> -->
<!--                                     </moduleInfo> -->
<!--                                 </module> -->
<!--                                 <module> -->
<!--                                     <artifact> -->
<!--                                         <groupId>${project.groupId}</groupId> -->
<!--                                         <artifactId>hibernate-search-engine</artifactId> -->
<!--                                         <version>${project.version}</version> -->
<!--                                     </artifact> -->
<!--                                     <moduleInfo> -->
<!--                                         <addServiceUses>true</addServiceUses> -->
<!--                                     </moduleInfo> -->
<!--                                 </module> -->
<!--                                 <module> -->
<!--                                     <artifact> -->
<!--                                         <groupId>org.glassfish</groupId> -->
<!--                                         <artifactId>javax.el</artifactId> -->
<!--                                         <version>${javax.el.version}</version> -->
<!--                                     </artifact> -->
<!--                                     <moduleInfo> -->
<!--                                         <name>java.el</name> -->
<!--                                     </moduleInfo> -->
<!--                                 </module> -->
<!--                                 <module> -->
<!--                                     <artifact> -->
<!--                                         <groupId>com.fasterxml</groupId> -->
<!--                                         <artifactId>classmate</artifactId> -->
<!--                                         <version>${classmate.version}</version> -->
<!--                                     </artifact> -->
<!--                                     <moduleInfo> -->
<!--                                         <name>com.fasterxml.classmate</name> -->
<!--                                     </moduleInfo> -->
<!--                                 </module> -->
<!--                                 <module> -->
<!--                                     <artifact> -->
<!--                                         <groupId>org.hibernate.validator</groupId> -->
<!--                                         <artifactId>hibernate-validator</artifactId> -->
<!--                                         <version>${hibernate.validator.version}</version> -->
<!--                                     </artifact> -->
<!--                                     <moduleInfo> -->
<!--                                         <name>org.hibernate.validator</name> -->
<!--                                         <requires> -->
<!--                                             static jboss.logging.annotations; -->
<!--                                             transitive java.validation; -->
<!--                                             *; -->
<!--                                         </requires> -->
<!--                                         <exports> -->
<!--                                             org.hibernate.validator.internal.util.logging to org.jboss.logging; -->
<!--                                             !org.hibernate.validator.internal*; -->
<!--                                             *; -->
<!--                                         </exports> -->
<!--                                         <uses> -->
<!--                                             javax.validation.ConstraintValidator; -->
<!--                                             javax.validation.valueextraction.ValueExtractor; -->
<!--                                         </uses> -->
<!--                                     </moduleInfo> -->
<!--                                 </module> -->
<!--                                 <module> -->
<!--                                     <artifact> -->
<!--                                         <groupId>org.jboss.logging</groupId> -->
<!--                                         <artifactId>jboss-logging</artifactId> -->
<!--                                         <version>${jboss.logging.version}</version> -->
<!--                                     </artifact> -->
<!--                                     <moduleInfo> -->
<!--                                         <name>org.jboss.logging</name> -->
<!--                                         <requires> -->
<!--                                             static jboss.logmanager; -->
<!--                                             static log4j; -->
<!--                                             static log4j.api; -->
<!--                                             static slf4j.api; -->
<!--                                             *; -->
<!--                                         </requires> -->
<!--                                     </moduleInfo> -->
<!--                                 </module> -->
<!--                             </modules> -->
<!--                         </configuration> -->
<!--                         <goals> -->
<!--                             <goal>add-module-info</goal> -->
<!--                         </goals> -->
<!--                     </execution> -->
<!--                     <execution> -->
<!--                         <id>add-module-info-to-test</id> -->
<!--                         <phase>package</phase> -->
<!--                         <configuration> -->
<!--                             <outputDirectory>${project.build.directory}/modules</outputDirectory> -->
<!--                             <modules> -->
<!--                                 <module> -->
<!--                                     <file>${project.build.directory}/${project.artifactId}-${project.version}.jar</file> -->
<!--                                     <mainClass>com.example.ValidationTest</mainClass> -->
<!--                                     <version>${project.version}</version> -->
<!--                                     <moduleInfoSource> -->
<!--                                         open module com.example { -->
<!--                                             requires org.hibernate.validator; -->
<!--                                             exports com.example; -->
<!--                                         } -->
<!--                                     </moduleInfoSource> -->
<!--                                 </module> -->
<!--                             </modules> -->
<!--                         </configuration> -->
<!--                         <goals> -->
<!--                             <goal>add-module-info</goal> -->
<!--                         </goals> -->
<!--                     </execution> -->
<!--                 </executions> -->
<!-- </plugin> -->
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>1.6.0</version>
                    <configuration>
                        <executable>java</executable>
                        <arguments>
                            <argument>--module-path</argument> <!-- or -p  -->
                            <!-- automatically creates the modulepath using all project dependencies,
                            also adding the project build directory -->
                            <modulepath/>
                            <argument>--upgrade-module-path</argument>
                            <argument>/Users/gunnar/.m2/repository/org/jboss/spec/javax/transaction/jboss-transaction-api_1.2_spec/2.0.0.Alpha1</argument>
                            <argument>--add-modules</argument>
                            <argument>java.xml.bind</argument>
                            <argument>-ea</argument>
                            <argument>--module</argument> <!-- or -m -->
                            <argument>hibernate.search.integrationtest.jdk9.modules.client/org.hibernate.search.test.integration.jdk9_modules.client.service.MyEntityServiceMain</argument>
                          </arguments>
                      </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>


</project>
